turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:5: error: not found: value setPenColor
    setPenColor(colors(i))
    ^